syntax = "proto3";

package counter.v1;

option go_package = "crimtech_deliverable/proto";

service CounterService {
    rpc Increment (IncrementRequest) returns (IncrementResponse);
}

message IncrementRequest {}

message IncrementResponse {
    int64 new_value = 1;
}
